--- a/index.css
+++ b/index.css
@@ -1,26 +1,50 @@
-form {
+body {
   font: 1em sans-serif;
-  max-width: 320px;
+  width: 200px;
+  padding: 0;
+  margin: 0 auto;
 }
 
-p > label {
+p * {
   display: block;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="number"],
-textarea,
-fieldset {
+input[type="email"] {
+  appearance: none;
+
   width: 100%;
   border: 1px solid #333;
+  margin: 0;
+
+  font-family: inherit;
+  font-size: 90%;
+
   box-sizing: border-box;
 }
 
+/* This is our style for the invalid fields */
 input:invalid {
-  box-shadow: 0 0 5px 1px red;
+  border-color: #900;
+  background-color: #fdd;
 }
 
 input:focus:invalid {
-  box-shadow: none;
+  outline: none;
+}
+
+/* This is the style of our error messages */
+.error {
+  width: 100%;
+  padding: 0;
+
+  font-size: 80%;
+  color: white;
+  background-color: #900;
+  border-radius: 0 0 5px 5px;
+
+  box-sizing: border-box;
+}
+
+.error.active {
+  padding: 0.3em;
 }
