--- a/index.css
+++ b/index.css
@@ -5,13 +5,16 @@ body {
   margin: 0 auto;
 }
 
+form {
+  max-width: 200px;
+}
+
 p * {
   display: block;
 }
 
-input[type="email"] {
+input#mail {
   appearance: none;
-
   width: 100%;
   border: 1px solid #333;
   margin: 0;
@@ -23,7 +26,7 @@ input[type="email"] {
 }
 
 /* This is our style for the invalid fields */
-input:invalid {
+input.invalid {
   border-color: #900;
   background-color: #fdd;
 }
@@ -41,7 +44,6 @@ input:focus:invalid {
   color: white;
   background-color: #900;
   border-radius: 0 0 5px 5px;
-
   box-sizing: border-box;
 }
 
